# durandal

./: .gitignore  Cargo.toml
durandal/: Cargo.toml
durandal-core/: Cargo.toml  README.md
durandal-core/src/: error.rs  external.rs  lib.rs
durandal-derives/: Cargo.toml
durandal-derives/src/: lib.rs
durandal-derives/tests/: cli-dispatch.rs  cli-meta-dispatch.rs  integration.rs
durandal-task/: Cargo.toml
durandal-task/src/: config.rs  iou_client.rs  main.rs  parser.rs  task.rs  task_table.rs
durandal-task/src/cli/: annotate.rs  current.rs  done.rs  inbox.rs  interrupt.rs  mod.rs  new.rs  next.rs  open.rs  projects.rs  replan.rs  requests.rs  rfc_util.rs  scrum.rs  stop.rs  table.rs  weekly.rs
durandal-task/src/workflow/: create.rs  inbox.rs  mod.rs  next.rs  pr.rs
durandal/src/: main.rs
durandal/src/cli/: list.rs  mod.rs
src/: cli.rs  lib.rs  main.rs
src/routine/: mod.rs  say.rs
